public/assets/style.css
body {
    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
    background: url('color-bg.gif') center no-repeat;
}

p {
    margin-top: 20px;
}

h2:first-child {
    margin-top: 5px;
}

.form-horizontal .form-group {
    margin-left: 0;
    margin-right: 0;
}

.well {
    border: none;
    background-color: transparent;
}

.ui.ordered.steps .step.completed:before,
.ui.steps .step.completed>.icon:before {
    color: orangered;
}

#foodInput {
    display: none;
}

